<resources>
    <string name="app_name">Shopstume</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Cerrar sesión</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_users">Gestión de usuarios</string>
    <string name="menu_costumes">Gestión de disfraces</string>
    <string name="menu_orders">Gestión de pedidos</string>
    <string name="menu_notifications">Notificaciones</string>
    <string name="menu_reports">Reportes</string>

    <string name="login">Iniciar sesión</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>

    <string name="gestion_usuarios">Usuarios</string>
    <string name="gestion_disfraces">Disfraces</string>
    <string name="gestion_pedidos">Pedidos</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="reportes">Reportes</string>
    
    <string name="user_name">Nombre de usuario</string>
    <string name="role">Rol</string>
    
    <string name="last_name">Apellido</string>
    <string-array name="roles">
        <item>Empleado</item>
        <item>Administrador</item>
    </string-array>

    <string name="search">Buscar</string>
    <string name="nombre_disfraz">Nombre de disfraz</string>
    <string name="estado_disfraz">Estado</string>
    <string name="precio_disfraz">Precio</string>
    <string name="talla_disfraz">Talla</string>
    <string name="stock_disfraz">Stock</string>
    
    <string-array name="sizes">
        <item>Chica</item>
        <item>Mediana</item>
        <item>Grande</item>
        <item>Muy grande</item>
    </string-array>

    <string-array name="costume_images">
        <item>costume1</item>
        <item>costume2</item>
        <item>costume3</item>
        <item>costume4</item>
        <item>costume5</item>
        <item>costume7</item>
    </string-array>

    <string name="sizes">Tallas</string>
    <string name="images">Imágenes</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>