<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_userManagement"
            android:title="@string/gestion_usuarios" />
        <item
            android:id="@+id/nav_costumeManagement"
            android:title="@string/gestion_disfraces" />
        <item
            android:id="@+id/nav_orders"
            android:title="@string/gestion_pedidos" />
        <item
            android:id="@+id/nav_notifications"
            android:title="@string/notificaciones" />
        <item
            android:id="@+id/nav_reports"
            android:title="@string/reportes" />
    </group>
</menu>