<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.shopstume.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_userManagement"
        android:name="com.example.shopstume.UserManagementFragment"
        android:label="@string/menu_users"
        tools:layout="@layout/fragment_user_management" />
    <fragment
        android:id="@+id/nav_costumeManagement"
        android:name="com.example.shopstume.CostumeManagementFragment"
        android:label="@string/menu_costumes"
        tools:layout="@layout/fragment_costume_management" />
    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.example.shopstume.NotificationFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notification" />
    <fragment
        android:id="@+id/nav_reports"
        android:name="com.example.shopstume.ReportFragment"
        android:label="@string/menu_reports"
        tools:layout="@layout/fragment_report" />
</navigation>