<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etCostumeName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/nombre_disfraz"
        android:inputType="text" />

    <EditText
        android:id="@+id/etCostumePrice"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/precio_disfraz"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/tvTallas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sizes"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <Spinner
        android:id="@+id/spinnerSizes"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <EditText
        android:id="@+id/etCostumeStock"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/stock_disfraz"
        android:inputType="number" />

    <TextView
        android:id="@+id/tvImages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/images"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <Spinner
        android:id="@+id/spinnerImages"
        android:layout_width="match_parent"
        android:layout_height="48dp" />


</LinearLayout>