<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="149dp"
            android:padding="16dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageCostume"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_gravity="center"
                app:srcCompat="@drawable/costume1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:orientation="vertical"
                android:layout_toEndOf="@id/imageCostume">

                <TextView
                    android:id="@+id/textCostumeName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/nombre_disfraz" />

                <TextView
                    android:id="@+id/textCostumeState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/estado_disfraz"/>

                <TextView
                    android:id="@+id/textCostumeSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/talla_disfraz"/>

                <TextView
                    android:id="@+id/textCostumePrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/precio_disfraz"/>

                <TextView
                    android:id="@+id/textCostumeStock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stock_disfraz"/>
            </LinearLayout>
            <ImageButton
                android:id="@+id/btnEditCostume"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:layout_toStartOf="@id/btnDeleteCostume"
                android:src="@drawable/edit_icon" />

            <ImageButton
                android:id="@+id/btnDeleteCostume"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/delete_icon" />

        </RelativeLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>